--- a/cv_4.tex
+++ b/cv_4.tex
@@ -36,7 +36,7 @@
 \newcommand{\tab}[1]{\hspace{.2667\textwidth}\rlap{#1}}
 \newcommand{\itab}[1]{\hspace{0em}\rlap{#1}}
 \name{Galen Bergsten}
-\address{PhD Student $\mid$ \href{mailto:gbergsten@arizona.edu}{gbergsten@arizona.edu}}
+\address{PhD Candidate $\mid$ \href{mailto:gbergsten@arizona.edu}{gbergsten@arizona.edu}}
 \address{Lunar and Planetary Laboratory, University of Arizona}
 
 %customize entries left, center and right
@@ -55,6 +55,8 @@
 
 \newcommand{\mystrut}{\rule[-.3\baselineskip]{0pt}{\baselineskip}}
 
+\newcommand{\cvline}[1]{\vspace*{\dimexpr-\parskip-0.3\baselineskip}\noindent\rule{\textwidth}{0.4pt}\vspace*{\dimexpr-0.3\parskip-0\baselineskip}}
+
 \renewenvironment{rSection}[1]{\mystrut{\textcolor{black}{{\large{\textbf{#1}}}}}
 % \textcolor{PrettyPurple}{\MakeUppercase{#1}}
 \vspace{-5pt} %{\color{Black} \hrule height 2.5pt}
@@ -66,11 +68,11 @@
 \end{list}
 }
 
-
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
  
 \begin{document}
 \thispagestyle{empty}
+\cvline{}
 
 % \noindent\begin{tabular*}{\textwidth}{@{\extracolsep{\fill}}l rr}
 % PhD Student & \\
@@ -82,8 +84,6 @@
 %----------------------------------------------------------------------------------------
 %	EDUCATION SECTION
 %----------------------------------------------------------------------------------------
-\vspace{5pt}\hline
-\vspace{0pt}
 
 \begin{rSection}{Education}
 
@@ -97,8 +97,7 @@
 %Member of Eta Kappa Nu \\
 %Member of Upsilon Pi Epsilon \\
 \end{rSection}
-\vspace{5pt}\hline
-\vspace{0pt}
+\cvline{}
 
 % %----------------------------------------------------------------------------------------
 % %	TECHNICAL STRENGTHS SECTION
@@ -132,23 +131,21 @@
 {\bf Undergraduate Research \& Teaching Assistant}, University of Utah \hfill {\em 2017 - 2020} \\
 {Characterization of spectroscopic signatures in the interstellar medium associated with massive evolved stars; chemical enrichment via supernova remnant ejecta absorption features.}
 \end{rSection}
-\vspace{5pt}\hline
-\vspace{0pt}
-
+\cvline{}
 
 %----------------------------------------------------------------------------------------
 %	PUBLICATIONS SECTION
 %----------------------------------------------------------------------------------------
 % usually hand-modify a AASTeX output from ADS
 % (\textbf{Bergsten, G.} \ordinalnum{X} author)
-
 \begin{rSection}{Publications} \itemsep -2pt
 \begin{etaremune}[nosep]
 
+\item{Schlecker, M., Apai, D., Lichtenberg, T. et al. (\textbf{Bergsten, G.} \ordinalnum{4} author) 2023, submitted: \textit{Bioverse: The Habitable Zone Inner Edge Discontinuity as an Imprint of Runaway Greenhouse Climates on Exoplanet Demographics}}\vspace{-7pt}
 
-\item{Hardegree-Ullman, K. K., Apai, D., \textbf{Bergsten, G.} et al. 2022, submitted: \textit{Bioverse: A Comprehensive Assessment of the Capabilities of Extremely Large Telescopes to Probe Earth-like O2 Levels in Nearby Transiting Habitable Zone Exoplanets}}\vspace{-7pt}
+\item{Hardegree-Ullman, K. K., Apai, D., \textbf{Bergsten, G.} et al. 2023, accepted: \textit{Bioverse: A Comprehensive Assessment of the Capabilities of Extremely Large Telescopes to Probe Earth-like O2 Levels in Nearby Transiting Habitable Zone Exoplanets}}\vspace{-7pt}
 
-\item{Wanderley, F., Kunha, C., Souto, D. et al. (\textbf{Bergsten, G.} \ordinalnum{13} author) 2023, submitted: \textit{Stellar Characterization and Radius Inflation of Hyades M Dwarf Stars from the APOGEE Survey}}\vspace{-7pt}
+\item{Wanderley, F., Kunha, C., Souto, D. et al. (\textbf{Bergsten, G.} \ordinalnum{13} author) 2023, accepted: \textit{Stellar Characterization and Radius Inflation of Hyades M Dwarf Stars from the APOGEE Survey}}\vspace{-7pt}
 
 \item{\textbf{Bergsten, G.}, Pascucci, I., Mulders, G. D. et al. 2022, AJ, 164, 190: \textit{The Demographics of Kepler's Earths and super-Earths into the Habitable Zone}}\vspace{-7pt}
 
@@ -160,12 +157,12 @@
 
 \end{etaremune}
 \end{rSection}
-\vspace{5pt}\hline
-\vspace{0pt}
+\cvline{}
 
 %----------------------------------------------------------------------------------------
 %	TALKS & POSTERS SECTION
 %----------------------------------------------------------------------------------------
+\newpage
 \begin{rSection}{Selected Talks and Posters} \itemsep -2pt
 \begin{enumerate}
 
@@ -204,8 +201,7 @@
 
 \end{enumerate}
 \end{rSection}
-\vspace{5pt}\hline
-\vspace{0pt}
+\cvline{}
 
 
 %----------------------------------------------------------------------------------------
@@ -220,14 +216,15 @@
 \end{rSubsection}
 % \vspace{-1pt}
 \begin{rSubsection}{Scholarships}{}{}{}
+Galileo Circle Scholarship \hfill {\em 2023}\\
 {Thomas J. Parmley Scholarship for Outstanding Students in Physics and Astronomy \hfill {\em 2019}}\\
 {Walter W. Wada Endowed Scholarship in Physics and Astronomy \hfill {\em 2018}}\\
 {Utah Student Success Scholarship \hfill {\em 2016, 2017}}\\
 {University of Utah President’s Scholarship \hfill {\em 2016}}
 \end{rSubsection}
+\vspace{0.5em}
 \end{rSection}
-\vspace{10pt}\hline
-\vspace{0pt}
+\cvline{}
 
 
 %----------------------------------------------------------------------------------------
@@ -247,8 +244,7 @@
 {Foundations of Astronomy - Instructor: Dr. Gail Zasowski (Utah) \hfill {\em 2018, 2019}}
 \end{rSubsection}
 \end{rSection}
-\vspace{10pt}\hline
-\vspace{0pt}
+\cvline{}
 
 
 %----------------------------------------------------------------------------------------
@@ -277,7 +273,7 @@
 {Undergraduate Women in Physics \& Astronomy, University of Utah \hfill {\em 2018 - 2020}}
 \end{rSubsection}
 \begin{rSubsection}{University Leadership}{}{}{}
-{Inclusive Leadership Institute, University of Arizona \hfill {\em 2022 - Present}}\\
+{Inclusive Leadership Institute, University of Arizona \hfill {\em 2022 - 2023}}\\
 {Culturally Inclusive Planetary Engagement Workshop, Planetary ReaCH Program \hfill {\em 2022}}
 \end{rSubsection}
 \begin{rSubsection}{Outreach}{}{}{}
@@ -286,10 +282,13 @@
 {University of Utah Observatory Public Viewing Nights Volunteer \hfill {\em 2017 - 2020}}\\
 {Outreach Coordinator for Salt Lake City K-12 Public Schools \hfill {\em 2016 - 2020}}
 \end{rSubsection}
+\vspace{0.5em}
 \end{rSection}
-\vspace{10pt}\hline
-\vspace{0pt}
+\cvline{}
 
+%----------------------------------------------------------------------------------------
+%	MENTORSHIP SECTION
+%----------------------------------------------------------------------------------------
 \begin{rSection}{Mentorship} 
 {\bf Colin Boecker-Grieme}, Paradise Valley High School \hfill {\em 2022 - 2023} \\
 {Project: \textit{Habitability and Terrestrial Analogs of Europa's Subsurface Ocean}}\\
